=== ongoing ===

=== 0.1.3 ===

- Added related_names to foreign keys.

=== 0.1.2 ===

- Fixed some wrong paths and names.
- Fixed migrations.

=== 0.1.1 ===
 
 - Fixed wrong template folder name

=== 0.1 ===

Initial commit